// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`gux-form-field-number #render clearable should render component as expected (1) 1`] = `
<gux-form-field-number>
  <template shadowrootmode="open">
    <div class="gux-above gux-form-field-container">
      <div class="gux-above gux-form-field-label">
        <slot name="label"></slot>
        <gux-form-field-label-indicator variant="required"></gux-form-field-label-indicator>
        <slot name="label-info"></slot>
      </div>
      <div class="gux-input-and-error-container">
        <div class="gux-input" part="input-section">
          <div class="gux-input-container">
            <slot name="input"></slot>
          </div>
          <div class="gux-step-buttons-container">
            <button class="gux-step-button" title="Increment" type="button">
              <gux-icon decorative="" icon-name="custom/chevron-up-small-regular"></gux-icon>
            </button>
            <button class="gux-step-button" title="Decrement" type="button">
              <gux-icon decorative="" icon-name="custom/chevron-down-small-regular"></gux-icon>
            </button>
          </div>
        </div>
        <div class="gux-form-field-error">
          <gux-icon decorative="" icon-name="fa/hexagon-exclamation-solid"></gux-icon>
          <div class="gux-message">
            <slot name="error"></slot>
          </div>
        </div>
        <div class="gux-form-field-help">
          <div class="gux-message">
            <slot name="help"></slot>
          </div>
        </div>
      </div>
    </div>
  </template>
  <input id="gux-form-field-input-i" slot="input" type="number" value="10">
  <label for="gux-form-field-input-i" slot="label">
    Label
  </label>
</gux-form-field-number>
`;

exports[`gux-form-field-number #render clearable should render component as expected (2) 1`] = `
<gux-form-field-number clearable="">
  <template shadowrootmode="open">
    <div class="gux-above gux-form-field-container">
      <div class="gux-above gux-form-field-label">
        <slot name="label"></slot>
        <gux-form-field-label-indicator variant="required"></gux-form-field-label-indicator>
        <slot name="label-info"></slot>
      </div>
      <div class="gux-input-and-error-container">
        <div class="gux-input" part="input-section">
          <div class="gux-clear gux-input-container">
            <slot name="input"></slot>
            <gux-form-field-input-clear-button></gux-form-field-input-clear-button>
          </div>
          <div class="gux-step-buttons-container">
            <button class="gux-step-button" title="Increment" type="button">
              <gux-icon decorative="" icon-name="custom/chevron-up-small-regular"></gux-icon>
            </button>
            <button class="gux-step-button" title="Decrement" type="button">
              <gux-icon decorative="" icon-name="custom/chevron-down-small-regular"></gux-icon>
            </button>
          </div>
        </div>
        <div class="gux-form-field-error">
          <gux-icon decorative="" icon-name="fa/hexagon-exclamation-solid"></gux-icon>
          <div class="gux-message">
            <slot name="error"></slot>
          </div>
        </div>
        <div class="gux-form-field-help">
          <div class="gux-message">
            <slot name="help"></slot>
          </div>
        </div>
      </div>
    </div>
  </template>
  <input id="gux-form-field-input-i" slot="input" type="number" value="10">
  <label for="gux-form-field-input-i" slot="label">
    Label
  </label>
</gux-form-field-number>
`;

exports[`gux-form-field-number #render clearable should render component as expected (3) 1`] = `
<gux-form-field-number clearable="true">
  <template shadowrootmode="open">
    <div class="gux-above gux-form-field-container">
      <div class="gux-above gux-form-field-label">
        <slot name="label"></slot>
        <gux-form-field-label-indicator variant="required"></gux-form-field-label-indicator>
        <slot name="label-info"></slot>
      </div>
      <div class="gux-input-and-error-container">
        <div class="gux-input" part="input-section">
          <div class="gux-clear gux-input-container">
            <slot name="input"></slot>
            <gux-form-field-input-clear-button></gux-form-field-input-clear-button>
          </div>
          <div class="gux-step-buttons-container">
            <button class="gux-step-button" title="Increment" type="button">
              <gux-icon decorative="" icon-name="custom/chevron-up-small-regular"></gux-icon>
            </button>
            <button class="gux-step-button" title="Decrement" type="button">
              <gux-icon decorative="" icon-name="custom/chevron-down-small-regular"></gux-icon>
            </button>
          </div>
        </div>
        <div class="gux-form-field-error">
          <gux-icon decorative="" icon-name="fa/hexagon-exclamation-solid"></gux-icon>
          <div class="gux-message">
            <slot name="error"></slot>
          </div>
        </div>
        <div class="gux-form-field-help">
          <div class="gux-message">
            <slot name="help"></slot>
          </div>
        </div>
      </div>
    </div>
  </template>
  <input id="gux-form-field-input-i" slot="input" type="number" value="10">
  <label for="gux-form-field-input-i" slot="label">
    Label
  </label>
</gux-form-field-number>
`;

exports[`gux-form-field-number #render clearable should render component as expected (4) 1`] = `
<gux-form-field-number clearable="false">
  <template shadowrootmode="open">
    <div class="gux-above gux-form-field-container">
      <div class="gux-above gux-form-field-label">
        <slot name="label"></slot>
        <gux-form-field-label-indicator variant="required"></gux-form-field-label-indicator>
        <slot name="label-info"></slot>
      </div>
      <div class="gux-input-and-error-container">
        <div class="gux-input" part="input-section">
          <div class="gux-input-container">
            <slot name="input"></slot>
          </div>
          <div class="gux-step-buttons-container">
            <button class="gux-step-button" title="Increment" type="button">
              <gux-icon decorative="" icon-name="custom/chevron-up-small-regular"></gux-icon>
            </button>
            <button class="gux-step-button" title="Decrement" type="button">
              <gux-icon decorative="" icon-name="custom/chevron-down-small-regular"></gux-icon>
            </button>
          </div>
        </div>
        <div class="gux-form-field-error">
          <gux-icon decorative="" icon-name="fa/hexagon-exclamation-solid"></gux-icon>
          <div class="gux-message">
            <slot name="error"></slot>
          </div>
        </div>
        <div class="gux-form-field-help">
          <div class="gux-message">
            <slot name="help"></slot>
          </div>
        </div>
      </div>
    </div>
  </template>
  <input id="gux-form-field-input-i" slot="input" type="number" value="10">
  <label for="gux-form-field-input-i" slot="label">
    Label
  </label>
</gux-form-field-number>
`;

exports[`gux-form-field-number #render clearable should render component as expected (5) 1`] = `
<gux-form-field-number clearable="">
  <template shadowrootmode="open">
    <div class="gux-above gux-form-field-container">
      <div class="gux-above gux-form-field-label">
        <slot name="label"></slot>
        <gux-form-field-label-indicator variant="required"></gux-form-field-label-indicator>
        <slot name="label-info"></slot>
      </div>
      <div class="gux-input-and-error-container">
        <div class="gux-input" part="input-section">
          <div class="gux-disabled gux-input-container">
            <slot name="input"></slot>
          </div>
          <div class="gux-step-buttons-container">
            <button class="gux-step-button" disabled="" title="Increment" type="button">
              <gux-icon decorative="" icon-name="custom/chevron-up-small-regular"></gux-icon>
            </button>
            <button class="gux-step-button" disabled="" title="Decrement" type="button">
              <gux-icon decorative="" icon-name="custom/chevron-down-small-regular"></gux-icon>
            </button>
          </div>
        </div>
        <div class="gux-form-field-error">
          <gux-icon decorative="" icon-name="fa/hexagon-exclamation-solid"></gux-icon>
          <div class="gux-message">
            <slot name="error"></slot>
          </div>
        </div>
        <div class="gux-form-field-help">
          <div class="gux-message">
            <slot name="help"></slot>
          </div>
        </div>
      </div>
    </div>
  </template>
  <input disabled="" id="gux-form-field-input-i" slot="input" type="number" value="10">
  <label for="gux-form-field-input-i" slot="label">
    Label
  </label>
</gux-form-field-number>
`;

exports[`gux-form-field-number #render help should render component as expected 1`] = `
<gux-form-field-number>
  <template shadowrootmode="open">
    <div class="gux-above gux-form-field-container">
      <div class="gux-above gux-form-field-label">
        <slot name="label"></slot>
        <gux-form-field-label-indicator variant="required"></gux-form-field-label-indicator>
        <slot name="label-info"></slot>
      </div>
      <div class="gux-input-and-error-container">
        <div class="gux-input" part="input-section">
          <div class="gux-input-container">
            <slot name="input"></slot>
          </div>
          <div class="gux-step-buttons-container">
            <button class="gux-step-button" title="Increment" type="button">
              <gux-icon decorative="" icon-name="custom/chevron-up-small-regular"></gux-icon>
            </button>
            <button class="gux-step-button" title="Decrement" type="button">
              <gux-icon decorative="" icon-name="custom/chevron-down-small-regular"></gux-icon>
            </button>
          </div>
        </div>
        <div class="gux-form-field-error">
          <gux-icon decorative="" icon-name="fa/hexagon-exclamation-solid"></gux-icon>
          <div class="gux-message">
            <slot name="error"></slot>
          </div>
        </div>
        <div class="gux-form-field-help gux-show">
          <div class="gux-message">
            <slot name="help"></slot>
          </div>
        </div>
      </div>
    </div>
  </template>
  <input aria-describedby="gux-form-field-help-i" id="gux-form-field-input-i" name="e-1" slot="input" type="number" value="10">
  <label for="gux-form-field-input-i" slot="label">
    Default
  </label>
  <span id="gux-form-field-help-i" slot="help">
    This is a help message
  </span>
</gux-form-field-number>
`;

exports[`gux-form-field-number #render indicator marks should render component as expected (1) 1`] = `
<gux-form-field-number>
  <template shadowrootmode="open">
    <div class="gux-above gux-form-field-container">
      <div class="gux-above gux-form-field-label">
        <slot name="label"></slot>
        <gux-form-field-label-indicator variant="required"></gux-form-field-label-indicator>
        <slot name="label-info"></slot>
      </div>
      <div class="gux-input-and-error-container">
        <div class="gux-input" part="input-section">
          <div class="gux-input-container">
            <slot name="input"></slot>
          </div>
          <div class="gux-step-buttons-container">
            <button class="gux-step-button" title="Increment" type="button">
              <gux-icon decorative="" icon-name="custom/chevron-up-small-regular"></gux-icon>
            </button>
            <button class="gux-step-button" title="Decrement" type="button">
              <gux-icon decorative="" icon-name="custom/chevron-down-small-regular"></gux-icon>
            </button>
          </div>
        </div>
        <div class="gux-form-field-error">
          <gux-icon decorative="" icon-name="fa/hexagon-exclamation-solid"></gux-icon>
          <div class="gux-message">
            <slot name="error"></slot>
          </div>
        </div>
        <div class="gux-form-field-help">
          <div class="gux-message">
            <slot name="help"></slot>
          </div>
        </div>
      </div>
    </div>
  </template>
  <input id="gux-form-field-input-i" slot="input" type="number" value="10">
  <label for="gux-form-field-input-i" slot="label">
    Label
  </label>
</gux-form-field-number>
`;

exports[`gux-form-field-number #render indicator marks should render component as expected (2) 1`] = `
<gux-form-field-number indicator-mark="optional">
  <template shadowrootmode="open">
    <div class="gux-above gux-form-field-container">
      <div class="gux-above gux-form-field-label">
        <slot name="label"></slot>
        <gux-form-field-label-indicator variant="optional"></gux-form-field-label-indicator>
        <slot name="label-info"></slot>
      </div>
      <div class="gux-input-and-error-container">
        <div class="gux-input" part="input-section">
          <div class="gux-input-container">
            <slot name="input"></slot>
          </div>
          <div class="gux-step-buttons-container">
            <button class="gux-step-button" title="Increment" type="button">
              <gux-icon decorative="" icon-name="custom/chevron-up-small-regular"></gux-icon>
            </button>
            <button class="gux-step-button" title="Decrement" type="button">
              <gux-icon decorative="" icon-name="custom/chevron-down-small-regular"></gux-icon>
            </button>
          </div>
        </div>
        <div class="gux-form-field-error">
          <gux-icon decorative="" icon-name="fa/hexagon-exclamation-solid"></gux-icon>
          <div class="gux-message">
            <slot name="error"></slot>
          </div>
        </div>
        <div class="gux-form-field-help">
          <div class="gux-message">
            <slot name="help"></slot>
          </div>
        </div>
      </div>
    </div>
  </template>
  <input id="gux-form-field-input-i" slot="input" type="number" value="10">
  <label for="gux-form-field-input-i" slot="label">
    Label
  </label>
</gux-form-field-number>
`;

exports[`gux-form-field-number #render indicator marks should render component as expected (3) 1`] = `
<gux-form-field-number indicator-mark="required">
  <template shadowrootmode="open">
    <div class="gux-above gux-form-field-container">
      <div class="gux-above gux-form-field-label">
        <slot name="label"></slot>
        <gux-form-field-label-indicator variant="required"></gux-form-field-label-indicator>
        <slot name="label-info"></slot>
      </div>
      <div class="gux-input-and-error-container">
        <div class="gux-input" part="input-section">
          <div class="gux-input-container">
            <slot name="input"></slot>
          </div>
          <div class="gux-step-buttons-container">
            <button class="gux-step-button" title="Increment" type="button">
              <gux-icon decorative="" icon-name="custom/chevron-up-small-regular"></gux-icon>
            </button>
            <button class="gux-step-button" title="Decrement" type="button">
              <gux-icon decorative="" icon-name="custom/chevron-down-small-regular"></gux-icon>
            </button>
          </div>
        </div>
        <div class="gux-form-field-error">
          <gux-icon decorative="" icon-name="fa/hexagon-exclamation-solid"></gux-icon>
          <div class="gux-message">
            <slot name="error"></slot>
          </div>
        </div>
        <div class="gux-form-field-help">
          <div class="gux-message">
            <slot name="help"></slot>
          </div>
        </div>
      </div>
    </div>
  </template>
  <input id="gux-form-field-input-i" slot="input" type="number" value="10">
  <label for="gux-form-field-input-i" slot="label">
    Label
  </label>
</gux-form-field-number>
`;

exports[`gux-form-field-number #render input attributes should render component as expected (1) 1`] = `
<gux-form-field-number>
  <template shadowrootmode="open">
    <div class="gux-above gux-form-field-container">
      <div class="gux-above gux-form-field-label">
        <slot name="label"></slot>
        <gux-form-field-label-indicator variant="required"></gux-form-field-label-indicator>
        <slot name="label-info"></slot>
      </div>
      <div class="gux-input-and-error-container">
        <div class="gux-input" part="input-section">
          <div class="gux-input-container">
            <slot name="input"></slot>
          </div>
          <div class="gux-step-buttons-container">
            <button class="gux-step-button" title="Increment" type="button">
              <gux-icon decorative="" icon-name="custom/chevron-up-small-regular"></gux-icon>
            </button>
            <button class="gux-step-button" title="Decrement" type="button">
              <gux-icon decorative="" icon-name="custom/chevron-down-small-regular"></gux-icon>
            </button>
          </div>
        </div>
        <div class="gux-form-field-error">
          <gux-icon decorative="" icon-name="fa/hexagon-exclamation-solid"></gux-icon>
          <div class="gux-message">
            <slot name="error"></slot>
          </div>
        </div>
        <div class="gux-form-field-help">
          <div class="gux-message">
            <slot name="help"></slot>
          </div>
        </div>
      </div>
    </div>
  </template>
  <input id="gux-form-field-input-i" slot="input" type="number" value="10">
  <label for="gux-form-field-input-i" slot="label">
    Label
  </label>
</gux-form-field-number>
`;

exports[`gux-form-field-number #render input attributes should render component as expected (2) 1`] = `
<gux-form-field-number>
  <template shadowrootmode="open">
    <div class="gux-above gux-form-field-container">
      <div class="gux-above gux-form-field-label">
        <slot name="label"></slot>
        <gux-form-field-label-indicator variant="required"></gux-form-field-label-indicator>
        <slot name="label-info"></slot>
      </div>
      <div class="gux-input-and-error-container">
        <div class="gux-input" part="input-section">
          <div class="gux-disabled gux-input-container">
            <slot name="input"></slot>
          </div>
          <div class="gux-step-buttons-container">
            <button class="gux-step-button" disabled="" title="Increment" type="button">
              <gux-icon decorative="" icon-name="custom/chevron-up-small-regular"></gux-icon>
            </button>
            <button class="gux-step-button" disabled="" title="Decrement" type="button">
              <gux-icon decorative="" icon-name="custom/chevron-down-small-regular"></gux-icon>
            </button>
          </div>
        </div>
        <div class="gux-form-field-error">
          <gux-icon decorative="" icon-name="fa/hexagon-exclamation-solid"></gux-icon>
          <div class="gux-message">
            <slot name="error"></slot>
          </div>
        </div>
        <div class="gux-form-field-help">
          <div class="gux-message">
            <slot name="help"></slot>
          </div>
        </div>
      </div>
    </div>
  </template>
  <input disabled="" id="gux-form-field-input-i" slot="input" type="number" value="10">
  <label for="gux-form-field-input-i" slot="label">
    Label
  </label>
</gux-form-field-number>
`;

exports[`gux-form-field-number #render input attributes should render component as expected (3) 1`] = `
<gux-form-field-number>
  <template shadowrootmode="open">
    <div class="gux-above gux-form-field-container">
      <div class="gux-above gux-form-field-label gux-required">
        <slot name="label"></slot>
        <gux-form-field-label-indicator required="" variant="required"></gux-form-field-label-indicator>
        <slot name="label-info"></slot>
      </div>
      <div class="gux-input-and-error-container">
        <div class="gux-input" part="input-section">
          <div class="gux-input-container">
            <slot name="input"></slot>
          </div>
          <div class="gux-step-buttons-container">
            <button class="gux-step-button" title="Increment" type="button">
              <gux-icon decorative="" icon-name="custom/chevron-up-small-regular"></gux-icon>
            </button>
            <button class="gux-step-button" title="Decrement" type="button">
              <gux-icon decorative="" icon-name="custom/chevron-down-small-regular"></gux-icon>
            </button>
          </div>
        </div>
        <div class="gux-form-field-error">
          <gux-icon decorative="" icon-name="fa/hexagon-exclamation-solid"></gux-icon>
          <div class="gux-message">
            <slot name="error"></slot>
          </div>
        </div>
        <div class="gux-form-field-help">
          <div class="gux-message">
            <slot name="help"></slot>
          </div>
        </div>
      </div>
    </div>
  </template>
  <input id="gux-form-field-input-i" required="" slot="input" type="number" value="10">
  <label for="gux-form-field-input-i" slot="label">
    Label
  </label>
</gux-form-field-number>
`;

exports[`gux-form-field-number #render label-info should render component as expected 1`] = `
<gux-form-field-number>
  <template shadowrootmode="open">
    <div class="gux-above gux-form-field-container">
      <div class="gux-above gux-form-field-label">
        <slot name="label"></slot>
        <gux-form-field-label-indicator variant="required"></gux-form-field-label-indicator>
        <slot name="label-info"></slot>
      </div>
      <div class="gux-input-and-error-container">
        <div class="gux-input" part="input-section">
          <div class="gux-input-container">
            <slot name="input"></slot>
          </div>
          <div class="gux-step-buttons-container">
            <button class="gux-step-button" title="Increment" type="button">
              <gux-icon decorative="" icon-name="custom/chevron-up-small-regular"></gux-icon>
            </button>
            <button class="gux-step-button" title="Decrement" type="button">
              <gux-icon decorative="" icon-name="custom/chevron-down-small-regular"></gux-icon>
            </button>
          </div>
        </div>
        <div class="gux-form-field-error">
          <gux-icon decorative="" icon-name="fa/hexagon-exclamation-solid"></gux-icon>
          <div class="gux-message">
            <slot name="error"></slot>
          </div>
        </div>
        <div class="gux-form-field-help">
          <div class="gux-message">
            <slot name="help"></slot>
          </div>
        </div>
      </div>
    </div>
  </template>
  <input aria-describedby="gux-label-info-beta-i" id="gux-form-field-input-i" name="e-1" slot="input" type="number" value="10">
  <label for="gux-form-field-input-i" slot="label">
    Default
  </label>
  <gux-label-info-beta id="gux-label-info-beta-i" slot="label-info">
    <span slot="content">
      This is some tooltip text
    </span>
  </gux-label-info-beta>
</gux-form-field-number>
`;

exports[`gux-form-field-number #render label-position should render component as expected (1) 1`] = `
<gux-form-field-number>
  <template shadowrootmode="open">
    <div class="gux-above gux-form-field-container">
      <div class="gux-above gux-form-field-label">
        <slot name="label"></slot>
        <gux-form-field-label-indicator variant="required"></gux-form-field-label-indicator>
        <slot name="label-info"></slot>
      </div>
      <div class="gux-input-and-error-container">
        <div class="gux-input" part="input-section">
          <div class="gux-input-container">
            <slot name="input"></slot>
          </div>
          <div class="gux-step-buttons-container">
            <button class="gux-step-button" title="Increment" type="button">
              <gux-icon decorative="" icon-name="custom/chevron-up-small-regular"></gux-icon>
            </button>
            <button class="gux-step-button" title="Decrement" type="button">
              <gux-icon decorative="" icon-name="custom/chevron-down-small-regular"></gux-icon>
            </button>
          </div>
        </div>
        <div class="gux-form-field-error">
          <gux-icon decorative="" icon-name="fa/hexagon-exclamation-solid"></gux-icon>
          <div class="gux-message">
            <slot name="error"></slot>
          </div>
        </div>
        <div class="gux-form-field-help">
          <div class="gux-message">
            <slot name="help"></slot>
          </div>
        </div>
      </div>
    </div>
  </template>
  <input id="gux-form-field-input-i" slot="input" type="number" value="10">
  <label for="gux-form-field-input-i" slot="label">
    Label
  </label>
</gux-form-field-number>
`;

exports[`gux-form-field-number #render label-position should render component as expected (2) 1`] = `
<gux-form-field-number label-position="above">
  <template shadowrootmode="open">
    <div class="gux-above gux-form-field-container">
      <div class="gux-above gux-form-field-label">
        <slot name="label"></slot>
        <gux-form-field-label-indicator variant="required"></gux-form-field-label-indicator>
        <slot name="label-info"></slot>
      </div>
      <div class="gux-input-and-error-container">
        <div class="gux-input" part="input-section">
          <div class="gux-input-container">
            <slot name="input"></slot>
          </div>
          <div class="gux-step-buttons-container">
            <button class="gux-step-button" title="Increment" type="button">
              <gux-icon decorative="" icon-name="custom/chevron-up-small-regular"></gux-icon>
            </button>
            <button class="gux-step-button" title="Decrement" type="button">
              <gux-icon decorative="" icon-name="custom/chevron-down-small-regular"></gux-icon>
            </button>
          </div>
        </div>
        <div class="gux-form-field-error">
          <gux-icon decorative="" icon-name="fa/hexagon-exclamation-solid"></gux-icon>
          <div class="gux-message">
            <slot name="error"></slot>
          </div>
        </div>
        <div class="gux-form-field-help">
          <div class="gux-message">
            <slot name="help"></slot>
          </div>
        </div>
      </div>
    </div>
  </template>
  <input id="gux-form-field-input-i" slot="input" type="number" value="10">
  <label for="gux-form-field-input-i" slot="label">
    Label
  </label>
</gux-form-field-number>
`;

exports[`gux-form-field-number #render label-position should render component as expected (3) 1`] = `
<gux-form-field-number label-position="beside">
  <template shadowrootmode="open">
    <div class="gux-beside gux-form-field-container">
      <div class="gux-beside gux-form-field-label">
        <slot name="label"></slot>
        <gux-form-field-label-indicator variant="required"></gux-form-field-label-indicator>
        <slot name="label-info"></slot>
      </div>
      <div class="gux-input-and-error-container">
        <div class="gux-input" part="input-section">
          <div class="gux-input-container">
            <slot name="input"></slot>
          </div>
          <div class="gux-step-buttons-container">
            <button class="gux-step-button" title="Increment" type="button">
              <gux-icon decorative="" icon-name="custom/chevron-up-small-regular"></gux-icon>
            </button>
            <button class="gux-step-button" title="Decrement" type="button">
              <gux-icon decorative="" icon-name="custom/chevron-down-small-regular"></gux-icon>
            </button>
          </div>
        </div>
        <div class="gux-form-field-error">
          <gux-icon decorative="" icon-name="fa/hexagon-exclamation-solid"></gux-icon>
          <div class="gux-message">
            <slot name="error"></slot>
          </div>
        </div>
        <div class="gux-form-field-help">
          <div class="gux-message">
            <slot name="help"></slot>
          </div>
        </div>
      </div>
    </div>
  </template>
  <input id="gux-form-field-input-i" slot="input" type="number" value="10">
  <label for="gux-form-field-input-i" slot="label">
    Label
  </label>
</gux-form-field-number>
`;

exports[`gux-form-field-number #render label-position should render component as expected (4) 1`] = `
<gux-form-field-number label-position="screenreader">
  <template shadowrootmode="open">
    <div class="gux-form-field-container gux-screenreader">
      <div class="gux-form-field-label gux-screenreader">
        <slot name="label"></slot>
        <gux-form-field-label-indicator variant="required"></gux-form-field-label-indicator>
        <slot name="label-info"></slot>
      </div>
      <div class="gux-input-and-error-container">
        <div class="gux-input" part="input-section">
          <div class="gux-input-container">
            <slot name="input"></slot>
          </div>
          <div class="gux-step-buttons-container">
            <button class="gux-step-button" title="Increment" type="button">
              <gux-icon decorative="" icon-name="custom/chevron-up-small-regular"></gux-icon>
            </button>
            <button class="gux-step-button" title="Decrement" type="button">
              <gux-icon decorative="" icon-name="custom/chevron-down-small-regular"></gux-icon>
            </button>
          </div>
        </div>
        <div class="gux-form-field-error">
          <gux-icon decorative="" icon-name="fa/hexagon-exclamation-solid"></gux-icon>
          <div class="gux-message">
            <slot name="error"></slot>
          </div>
        </div>
        <div class="gux-form-field-help">
          <div class="gux-message">
            <slot name="help"></slot>
          </div>
        </div>
      </div>
    </div>
  </template>
  <input id="gux-form-field-input-i" slot="input" type="number" value="10">
  <label for="gux-form-field-input-i" slot="label">
    Label
  </label>
</gux-form-field-number>
`;
